Fix page width alignment by removing list padding

--- a/hugo/themes/liffstyle/assets/css/main.css
+++ b/hugo/themes/liffstyle/assets/css/main.css
@@ -53,6 +53,11 @@ p {
   margin-bottom: 1.25em;
 }
 
+ul {
+  padding-left: 0;
+  list-style-position: inside;
+}
+
 header {
 }
 
